rholang/src/main/tree_sitter/test/corpus/collections.txt
=======
Collections
=======

{[1,2,3]}
{Set(1,2,3)}
{{"key1":123}}
{(1,"2")}


---

(source_file
  (block
    body: (collection
      (list
        (long_literal)
        (long_literal)
        (long_literal))))
  (block
    body: (collection
      (set
        (long_literal)
        (long_literal)
        (long_literal))))
  (block
    body: (collection
      (map
        (key_value_pair
          key: (string_literal)
          value: (long_literal)))))
  (block
    body: (collection
      (tuple
        (long_literal)
        (string_literal)))))
