rholang/src/main/tree_sitter/test/corpus/gc_rev_vault.txt
=======
Genesis Ceremony (RevVault.rho cases)
=======

{
    initContinue!(Nil) |
    initContinue!()
}

{
    for (_ <- initContinue) {
        Nil
    } |
    for (<- initContinue) {
        Nil
    }
}

---

(source_file
  (block
    body: (par
      left: (send
        name: (var)
        send_type: (send_single)
        inputs: (inputs
          (nil)))
      right: (send
        name: (var)
        send_type: (send_single)
        inputs: (inputs))))
  (block
    body: (par
      left: (input
        formals: (receipts
          (linear_bind
            names: (names
              (wildcard))
            input: (simple_source
              (var))))
        proc: (block
          body: (nil)))
      right: (input
        formals: (receipts
          (linear_bind
            input: (simple_source
              (var))))
        proc: (block
          body: (nil))))))
