rholang/src/main/tree_sitter/test/corpus/if.txt
=======
If
=======

{ if (x) { y } else { z } }
{ if (x) { y } }
---

(source_file
  (block
    body: (ifElse
      condition: (var)
      ifTrue: (block
        body: (var))
      alternative: (block
        body: (var))))
  (block
    body: (ifElse
      condition: (var)
      ifTrue: (block
        body: (var)))))
