rholang/src/main/tree_sitter/test/corpus/sending_receiving.txt
=====================
Sending and receiving
=====================

new HelloWorld, stdout(`rho:io:stdout`) in {
  HelloWorld!("Hello, world!") |
  for (@text <- HelloWorld) {
    stdout!(text)
  }
}

---

(source_file
  (new
    decls: (decls
      (name_decl
        (var))
      (name_decl
        (var)
        uri: (uri_literal)))
    proc: (block
      body: (par
        left: (send
          name: (var)
          send_type: (send_single)
          inputs: (inputs
            (string_literal)))
        right: (input
          formals: (receipts
            (linear_bind
              names: (names
                (quote
                  (var)))
              input: (simple_source
                (var))))
          proc: (block
            body: (send
              name: (var)
              send_type: (send_single)
              inputs: (inputs
                (var)))))))))
