rholang/src/main/tree_sitter/test/corpus/treasury.txt
==============================================
Example Treasury Contract with Multi-Signature
==============================================

new stdout(`rho:io:stdout`), 
    boardMembers, 
    proposals, 
    treasuryBalance, 
    createProposal, 
    approveProposal, 
    executeProposal, 
    getBalance 
in {
  
  // Treasury balance initialization (example: 1000 tokens)
  treasuryBalance!(1000) |

  // List of authorized board members
  boardMembers!(Set("Alice", "Bob", "Charlie")) |

  // Proposals data structure
  proposals!([]) |

  // Function to create a proposal (only board members can create proposals)
  contract createProposal(@creator, @amount, @recipient, ret) = {
    for (@currentBoardMembers <- boardMembers) {
      if (currentBoardMembers.contains(creator)) {
        for (@currentProposals <- proposals) {
          let newProposal = { 
            "creator": creator, 
            "amount": amount, 
            "recipient": recipient, 
            "approvals": Set(creator)  // Initial approval from the creator
          } in {
            proposals!(currentProposals ++ [newProposal]) |
            ret!("Proposal created.")
          }
        }
      } else {
        ret!("Only board members can create proposals.")
      }
    }
  } |

  // Function to approve a proposal (only board members can approve)
  contract approveProposal(@member, @proposalIndex, ret) = {
    for (@currentBoardMembers <- boardMembers) {
      if (currentBoardMembers.contains(member)) {
        for (@currentProposals <- proposals) {
          let proposal = currentProposals.get(proposalIndex);
              updatedProposal = proposal.set("approvals", proposal.get("approvals").add(member));
              updatedProposals = currentProposals.set(proposalIndex, updatedProposal) in {
            proposals!(updatedProposals) |
            ret!("Proposal approved by " ++ member)
          }
        }
      } else {
        ret!("Only board members can approve proposals.")
      }
    }
  } |

  // Function to execute a proposal (requires majority approvals)
  contract executeProposal(@proposalIndex, ret) = {
    for (@currentBoardMembers <- boardMembers) {
      for (@currentProposals <- proposals) {
        let proposal = currentProposals.get(proposalIndex);
            approvalCount = proposal.get("approvals").size() in {
          if (approvalCount > currentBoardMembers.size() / 2) {
            for (@balance <- treasuryBalance) {
              if (balance >= proposal.get("amount")) {
                let updatedBalance = balance - proposal.get("amount") in {
                  treasuryBalance!(updatedBalance) |
                  stdout!("Executed proposal: Transferred " ++ proposal.get("amount").toString() ++ " to " ++ proposal.get("recipient")) |
                  ret!("Proposal executed successfully.")
                }
              } else {
                ret!("Insufficient funds in the treasury.")
              }
            }
          } else {
            ret!("Not enough approvals to execute the proposal.")
          }
        }
      }
    }
  } |

  // Function to check the treasury balance
  contract getBalance(ret) = {
    for (@balance <- treasuryBalance) {
      ret!("Treasury balance: " ++ balance.toString())
    }
  } |

  // Example usage
  // Board member "Alice" creates a proposal to transfer 100 tokens to "Dave"
  createProposal!("Alice", 100, "Dave", *stdout) |
  
  // Board member "Bob" approves the proposal
  approveProposal!("Bob", 0, *stdout) |

  // Execute the proposal after approvals
  executeProposal!(0, *stdout) |

  // Check treasury balance
  getBalance!(*stdout)
}

---

(source_file
  (new
    decls: (decls
      (name_decl
        (var)
        uri: (uri_literal))
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var))
      (name_decl
        (var)))
    proc: (block
      body: (par
        left: (par
          left: (par
            left: (par
              left: (par
                left: (par
                  left: (par
                    left: (par
                      left: (par
                        left: (par
                          left: (send
                            name: (var)
                            send_type: (send_single)
                            inputs: (inputs
                              (long_literal)))
                          right: (send
                            name: (var)
                            send_type: (send_single)
                            inputs: (inputs
                              (collection
                                (set
                                  (string_literal)
                                  (string_literal)
                                  (string_literal))))))
                        right: (send
                          name: (var)
                          send_type: (send_single)
                          inputs: (inputs
                            (collection
                              (list)))))
                      right: (contract
                        name: (var)
                        formals: (names
                          (quote
                            (var))
                          (quote
                            (var))
                          (quote
                            (var))
                          (var))
                        proc: (block
                          body: (input
                            formals: (receipts
                              (linear_bind
                                names: (names
                                  (quote
                                    (var)))
                                input: (simple_source
                                  (var))))
                            proc: (block
                              body: (ifElse
                                condition: (method
                                  receiver: (var)
                                  name: (var)
                                  args: (args
                                    (var)))
                                ifTrue: (block
                                  body: (input
                                    formals: (receipts
                                      (linear_bind
                                        names: (names
                                          (quote
                                            (var)))
                                        input: (simple_source
                                          (var))))
                                    proc: (block
                                      body: (let
                                        decls: (linear_decls
                                          (decl
                                            names: (names
                                              (var))
                                            procs: (procs
                                              (collection
                                                (map
                                                  (key_value_pair
                                                    key: (string_literal)
                                                    value: (var))
                                                  (key_value_pair
                                                    key: (string_literal)
                                                    value: (var))
                                                  (key_value_pair
                                                    key: (string_literal)
                                                    value: (var))
                                                  (key_value_pair
                                                    key: (string_literal)
                                                    value: (collection
                                                      (set
                                                        (var)))))))))
                                        body: (block
                                          body: (par
                                            left: (send
                                              name: (var)
                                              send_type: (send_single)
                                              inputs: (inputs
                                                (concat
                                                  left: (var)
                                                  right: (collection
                                                    (list
                                                      (var))))))
                                            right: (send
                                              name: (var)
                                              send_type: (send_single)
                                              inputs: (inputs
                                                (string_literal)))))))))
                                alternative: (block
                                  body: (send
                                    name: (var)
                                    send_type: (send_single)
                                    inputs: (inputs
                                      (string_literal))))))))))
                    right: (contract
                      name: (var)
                      formals: (names
                        (quote
                          (var))
                        (quote
                          (var))
                        (var))
                      proc: (block
                        body: (input
                          formals: (receipts
                            (linear_bind
                              names: (names
                                (quote
                                  (var)))
                              input: (simple_source
                                (var))))
                          proc: (block
                            body: (ifElse
                              condition: (method
                                receiver: (var)
                                name: (var)
                                args: (args
                                  (var)))
                              ifTrue: (block
                                body: (input
                                  formals: (receipts
                                    (linear_bind
                                      names: (names
                                        (quote
                                          (var)))
                                      input: (simple_source
                                        (var))))
                                  proc: (block
                                    body: (let
                                      decls: (linear_decls
                                        (decl
                                          names: (names
                                            (var))
                                          procs: (procs
                                            (method
                                              receiver: (var)
                                              name: (var)
                                              args: (args
                                                (var)))))
                                        (decl
                                          names: (names
                                            (var))
                                          procs: (procs
                                            (method
                                              receiver: (var)
                                              name: (var)
                                              args: (args
                                                (string_literal)
                                                (method
                                                  receiver: (method
                                                    receiver: (var)
                                                    name: (var)
                                                    args: (args
                                                      (string_literal)))
                                                  name: (var)
                                                  args: (args
                                                    (var)))))))
                                        (decl
                                          names: (names
                                            (var))
                                          procs: (procs
                                            (method
                                              receiver: (var)
                                              name: (var)
                                              args: (args
                                                (var)
                                                (var))))))
                                      body: (block
                                        body: (par
                                          left: (send
                                            name: (var)
                                            send_type: (send_single)
                                            inputs: (inputs
                                              (var)))
                                          right: (send
                                            name: (var)
                                            send_type: (send_single)
                                            inputs: (inputs
                                              (concat
                                                left: (string_literal)
                                                right: (var))))))))))
                              alternative: (block
                                body: (send
                                  name: (var)
                                  send_type: (send_single)
                                  inputs: (inputs
                                    (string_literal))))))))))
                  right: (contract
                    name: (var)
                    formals: (names
                      (quote
                        (var))
                      (var))
                    proc: (block
                      body: (input
                        formals: (receipts
                          (linear_bind
                            names: (names
                              (quote
                                (var)))
                            input: (simple_source
                              (var))))
                        proc: (block
                          body: (input
                            formals: (receipts
                              (linear_bind
                                names: (names
                                  (quote
                                    (var)))
                                input: (simple_source
                                  (var))))
                            proc: (block
                              body: (let
                                decls: (linear_decls
                                  (decl
                                    names: (names
                                      (var))
                                    procs: (procs
                                      (method
                                        receiver: (var)
                                        name: (var)
                                        args: (args
                                          (var)))))
                                  (decl
                                    names: (names
                                      (var))
                                    procs: (procs
                                      (method
                                        receiver: (method
                                          receiver: (var)
                                          name: (var)
                                          args: (args
                                            (string_literal)))
                                        name: (var)
                                        args: (args)))))
                                body: (block
                                  body: (ifElse
                                    condition: (gt
                                      left: (var)
                                      right: (div
                                        left: (method
                                          receiver: (var)
                                          name: (var)
                                          args: (args))
                                        right: (long_literal)))
                                    ifTrue: (block
                                      body: (input
                                        formals: (receipts
                                          (linear_bind
                                            names: (names
                                              (quote
                                                (var)))
                                            input: (simple_source
                                              (var))))
                                        proc: (block
                                          body: (ifElse
                                            condition: (gte
                                              left: (var)
                                              right: (method
                                                receiver: (var)
                                                name: (var)
                                                args: (args
                                                  (string_literal))))
                                            ifTrue: (block
                                              body: (let
                                                decls: (linear_decls
                                                  (decl
                                                    names: (names
                                                      (var))
                                                    procs: (procs
                                                      (minus
                                                        left: (var)
                                                        right: (method
                                                          receiver: (var)
                                                          name: (var)
                                                          args: (args
                                                            (string_literal)))))))
                                                body: (block
                                                  body: (par
                                                    left: (par
                                                      left: (send
                                                        name: (var)
                                                        send_type: (send_single)
                                                        inputs: (inputs
                                                          (var)))
                                                      right: (send
                                                        name: (var)
                                                        send_type: (send_single)
                                                        inputs: (inputs
                                                          (concat
                                                            left: (concat
                                                              left: (concat
                                                                left: (string_literal)
                                                                right: (method
                                                                  receiver: (method
                                                                    receiver: (var)
                                                                    name: (var)
                                                                    args: (args
                                                                      (string_literal)))
                                                                  name: (var)
                                                                  args: (args)))
                                                              right: (string_literal))
                                                            right: (method
                                                              receiver: (var)
                                                              name: (var)
                                                              args: (args
                                                                (string_literal)))))))
                                                    right: (send
                                                      name: (var)
                                                      send_type: (send_single)
                                                      inputs: (inputs
                                                        (string_literal)))))))
                                            alternative: (block
                                              body: (send
                                                name: (var)
                                                send_type: (send_single)
                                                inputs: (inputs
                                                  (string_literal))))))))
                                    alternative: (block
                                      body: (send
                                        name: (var)
                                        send_type: (send_single)
                                        inputs: (inputs
                                          (string_literal))))))))))))))
                right: (contract
                  name: (var)
                  formals: (names
                    (var))
                  proc: (block
                    body: (input
                      formals: (receipts
                        (linear_bind
                          names: (names
                            (quote
                              (var)))
                          input: (simple_source
                            (var))))
                      proc: (block
                        body: (send
                          name: (var)
                          send_type: (send_single)
                          inputs: (inputs
                            (concat
                              left: (string_literal)
                              right: (method
                                receiver: (var)
                                name: (var)
                                args: (args))))))))))
              right: (send
                name: (var)
                send_type: (send_single)
                inputs: (inputs
                  (string_literal)
                  (long_literal)
                  (string_literal)
                  (eval
                    (var)))))
            right: (send
              name: (var)
              send_type: (send_single)
              inputs: (inputs
                (string_literal)
                (long_literal)
                (eval
                  (var)))))
          right: (send
            name: (var)
            send_type: (send_single)
            inputs: (inputs
              (long_literal)
              (eval
                (var)))))
        right: (send
          name: (var)
          send_type: (send_single)
          inputs: (inputs
            (eval
              (var))))))))
